--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 node_modules/
+client/node_modules/
+/config/default.json
 
 /client/build
 
@@ -7,7 +9,31 @@ node_modules/
 /client/.env.development.local
 /client/.env.test.local
 /client/.env.production.local
-
+ 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# dependencies
+node_modules/
+#client/node_modules
+/.pnp
+.pnp.js
+ 
+# testing
+/coverage
+ 
+# production
+/build
+ 
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+ 
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+ 
