--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Contact manager app",
   "main": "server.js",
+  "proxy": "http://0.0.0.0:3001",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
+    "server": "nodemon server.js --ignore './client/' --ignore client",
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -23,6 +24,7 @@
     "config": "^3.2.2",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "http-proxy-middleware": "^0.20.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1"
   },
